--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 
         <header class="col-md-12 ">
-            <div class="col-8 col-md-3 offset-md-9 row text-right d-flex justify-content-end" id="inscription_connexion">
+            <div class="col-8 col-md-3 offset-md-9 offset-sm-4  row text-right d-flex justify-content-end" id="inscription_connexion">
                 <a href="#" class="col-md-6 col-3 "><p class="menu_inscription">Inscription</p></a>
                 <a href="#" class="col-md-6 col-4 "><p class=" menu_connexion">Connexion</p></a>
             </div>
@@ -11,5 +11,4 @@
         <div id="pageContent">
             <!-- le bouton qui permet d'afficher le Menu -->
             <button class="openbtn" id="btnOpen" onclick="showMenu()">&#9776;</button>
-
             <div id="corps text-center">
