--- a/views/messagerie.ejs
+++ b/views/messagerie.ejs
@@ -7,6 +7,8 @@
     <body>
         <% if(logged==true){ %>
         <%- include('./partials/headerLoggedProfil'); -%>
+        <div id="corps text-center">
+                 <p class="offset-1 col-8 col-md-8 offset-md-0" id="bjr">Bonjour <%= User %></p>
         <% } else{ %>
         <%- include('./partials/headerProfil'); -%>
         <% } %>
@@ -20,10 +22,10 @@
                     <div class="col-md-4 col-12">
 
                         <div class="list-group" id="list-tab" role="tablist" style="height: 500px; background-color: white">
-                            <a href="#" id="amis">Léa CLiquer pour Ouvrir la conversation</a>
+                            <a href="#" id="amis"></a>
                             <a style="pointer-events: none; cursor: default;" class="list-group-item list-group-item-action conversation" id="MyUsername" data-toggle="list" href="#<%= user %>" role="tab" aria-controls="home"><%= user %></a>
                             <% for(var i=0; i < users.length; i++) { %>
-                            <a class="list-group-item list-group-item-action conversation" id="<%= users[i].Id %>" data-toggle="list" href="#<%= users[i].Id %>" role="tab" aria-controls="home"><%= users[i].Id %></a>
+                            <a class="list-group-item list-group-item-action conversation" id="<%= users[i].Id %>" data-toggle="list" href="#<%= users[i].Id %>" role="tab" aria-controls="home"><%= users[i].Nom %> <%= users[i].Prenom %></a>
 
                             <% } %>
                         </div>
