--- a/views/partials/menuProfil.ejs
+++ b/views/partials/menuProfil.ejs
@@ -11,17 +11,17 @@
                 </div>
 
             
-                <a href="./Profil">Profil</a>
-                <a href="./Messagerie">Messagerie</a>
-                <a href="./Rechercher">Rechercher</a>
-                <a href="./search">Rechercher un profil</a>
-                <a href="./Proposer">Proposer un trajet</a>
-                <a href="./Demande">Mes réservations</a>
+                <a href="../Profil">Profil</a>
+                <a href="../Messagerie">Messagerie</a>
+                <a href="../Rechercher">Rechercher</a>
+                <a href="../search">Rechercher un profil</a>
+                <a href="../Proposer">Proposer un trajet</a>
+                <a href="../Demande">Mes réservations</a>
             </div>
             
             <div id="ptmenu" class="menu">
                 <div class="col-md-12">
-                    <a href="./" class="col-md-1" title="home"><i class="fas fa-home"></i></a>
+                    <a href="../" class="col-md-1" title="home"><i class="fas fa-home"></i></a>
 <!--                    <a href="./" class="col-md-1"><img src="img/icon_home.png" title="home" width="30px"></a>-->
                     <a href="javascript:void(0)" class=" col-md- 6 closebtn" onclick="hideMenu()">&times;</a>
                 </div>
