--- a/views/proposer.ejs
+++ b/views/proposer.ejs
@@ -9,6 +9,8 @@
     <body>
         <% if(logged==true){ %>
         <%- include('./partials/headerLogged'); -%>
+        <div id="corps text-center">
+                 <p class="offset-1 col-8 col-md-8 offset-md-0" id="bjr">Bonjour <%= User %></p>
         <% } else{ %>
         <%- include('./partials/header'); -%>
         <% } %>
@@ -32,8 +34,7 @@
                             </div>
                             <div class="form-check col-md-12">
                                 <label class="form-check-label" for="Aller-retour">Aller-retour ?</label>
-                                <input class="" type="checkbox" checked name="Aller-retour" id="Aller-retour" value="Aller-retour" onclick="showRetourContainer()">
-<!--                                <input class="form-check-input" type="checkbox" name="Aller-retour" id="Aller-retour" value="Aller-retour" onclick="showRetourContainer()">-->
+                                <input class="" type="checkbox"  name="Aller-retour" id="Aller-retour" value="Aller-retour" onclick="showRetourContainer()">
                             </div>
                             
                             <div class="form-group col-md-12 row ">
@@ -58,7 +59,7 @@
                             </div>
                             
                            
-                            <div id="date-retour-container" class="form-group col-md-12 row" >
+                           <div id="date-retour-container" class="form-group col-md-12 row" style="display: none;" >
                                 <label class="col-md-4 col-12" for="Aller-retour" >Date du retour :</label>
                                 <div class="col-md-8  col-12 row">
                                     <div class="col-md-6 col-6">
@@ -102,6 +103,32 @@
             </div>
         </div>
 
+        <div class="modal fade" id="modalConfirmDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                  aria-hidden="true">
+                  <div class="modal-dialog modal-sm modal-notify modal-danger" role="document">
+                    <!--Content-->
+                    <div class="modal-content text-center">
+                      <!--Header-->
+                      <div class="modal-header d-flex justify-content-center">
+                      </div>
+
+                      <!--Body-->
+                      <div class="modal-body">
+
+                                               <p><%if ( typeof err != 'undefined' ) {%> <%= err %> <%}%></p>
+
+
+                      </div>
+
+                      <!--Footer-->
+                      <div class="modal-footer flex-center">
+                        <a type="button" class="btn  btn-danger waves-effect" data-dismiss="modal">Ok</a>
+                      </div>
+                    </div>
+                    <!--/.Content-->
+                  </div>
+                </div>
+                <!--Modal: modalConfirmDelete-->
 
         <!-- Affichage du calendrier de la date et l'heure-->
         <script type="text/javascript" src="javascripts//bootstrap-datetimepicker.js" charset="UTF-8"></script>
@@ -184,16 +211,19 @@
 
             function showRetourContainer(){
 
-                if (document.getElementById("date-retour-container").style.display == "none") {
-                    document.getElementById("date-retour-container").style.display = "flex";
+                if (document.getElementById("date-retour-container").style.display == "flex") {
+                    document.getElementById("date-retour-container").style.display = "none";
                 }
                 else{
-                    document.getElementById("date-retour-container").style.display = "none";
+                    document.getElementById("date-retour-container").style.display = "flex";
                 }
             }
 
         </script>
-        
+         <script>
+                       <%if ( typeof err != 'undefined' ) {%> $('#modalConfirmDelete').modal(); <%}%>
+                        </script>
+                <script>
         <script> 
             $(document).ready(function(){
                 /*je colore l'icone proposer pour dire que je suis sur cette page*/
