--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -76,6 +76,8 @@
 
 
                                 </form>
+
+                                <a href="../Contact/<%= useremail %>">Contacter</button>
                             </div>
                         </div>
                     </div>
