--- a/public/stylesheets/recherche.css
+++ b/public/stylesheets/recherche.css
@@ -20,25 +20,38 @@ span.trajet-circle{
     display: inline-block;
 }
 .vertical-line{
-    height: 60px;
+    height: 90px;
     width: 3px;
     background-color: black;
-    margin: 0 auto;
+    margin: 0 5px;
+}
+#ligne-horizontale {
+    border-top: 0.5px solid black;
+    padding: 25px;
+    margin: 5px;
+}
+.trajet-vertical-separator{
+    height: 90px;
 }
 
-.trajet-vertical-separator{
-    height: 60px;
+#trajet-star {
+    height: 20px;
+    width: 20px;
 }
 
 #img-profile{
     border-radius: 50%;
+    /*
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 60px;
-    height: 60px;
+    */
+    width: 110px;
+    height: 110px;
+    /*
     margin-top: -30px;
     margin-left: -30px;
+    */
 }
 .img-arrow{
     width: 20px;
@@ -56,13 +69,24 @@ span.trajet-circle{
     font-size: 1.3em;
 }
 .trajet-place{
-    font-size: 15px;
+    /*    font-size: 15px;*/
 
 }
 
 .no-gutter > [class*='col-'] {
     padding-right:0;
     padding-left:0;
+}
+@media screen and (max-width: 600px) {
+    #suppr_trajet-vertical-separator {
+        height: 50px;
+    }
+    .trajet-vertical-separator {
+        height: 120px;
+    }
+    .vertical-line{
+    height: 120px;
+}
 }
 
 /*
@@ -95,26 +119,26 @@ border-left: 5px solid black;
 
 }
 */
- #container1 .form-control {
-        color: white;
-        background-color: #8d3939;
-        border-color: #8d3939;
-    }
+#container1 .form-control {
+    color: white;
+    background-color: #8d3939;
+    border-color: #8d3939;
+}
 
-    #container1 .form-control:focus {
-        color: white;
-        background-color: #8d3939;
-        border-color: white;
-        outline: 0;
-        box-shadow: 0 0 0 0.2rem white;
-    }
+#container1 .form-control:focus {
+    color: white;
+    background-color: #8d3939;
+    border-color: white;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem white;
+}
 
-    
 
-    #container1 .btn-primary {
-        color: #fff;
-        background-color: #8d3939d6 !important;
-    }
+
+#container1 .btn-primary {
+    color: #fff;
+    background-color: #8d3939d6 !important;
+}
 
 #container1 .card {
     background-color: #7366a54f;
@@ -145,7 +169,7 @@ border-left: 5px solid black;
         padding: 10px;
     }
 
-   #container1 .card {
+    #container1 .card {
         background: transparent;
         box-shadow: none;
     }
